i think this will fix any layout problem on 'Advanced Search' -- Bob, dump you're cache and re-check, let me know what you see

--- a/public/stylesheets/v2/forms.css
+++ b/public/stylesheets/v2/forms.css
@@ -512,7 +512,7 @@ div.counter .over { color:red }
     width:950px;
 }
 
-.fh-form.advanced span.collection {
+.fh-form.advanced div.collection {
     margin:0 0 0 165px;
 }
 
